# STM32_CMake_Sandbox

./: .gitattributes  .mxproject  CMakeLists.txt  README.md
.github/: FUNDING.yml
Core/: CMakeLists.txt
Core/Src/: main.cpp
Projects/TestApp/: .mxproject  CMakeLists.txt  Makefile  TestCpp.ioc
Projects/TestApp/Core/: CMakeLists.txt
Projects/TestApp/Core/Inc/: main.h
Projects/TestApp/Core/Src/: main.cpp  stm32f1xx_hal_msp.c
Projects/TestApp/Drivers/: CMakeLists.txt
Projects/TestApp/Drivers/CMSIS/Device/ST/STM32F1xx/Include/: stm32f103xb.h
Projects/TestApp/cmake/: arm_gcc_toolchain.cmake  project.cmake  stm32f1xx_gcc_toolchain.cmake
Projects/cnc/: .mxproject  CMakeLists.txt  Makefile  cnc.ioc
Projects/cnc/Core/: CMakeLists.txt
Projects/cnc/Core/Src/: main.cpp  stm32f1xx_hal_msp.c
Projects/cnc/cmake/: utils.cmake
Sandbox/MinGW/msys/1.0/etc/: fstab.sample
Sandbox/MinGW/var/lib/mingw-get/data/: manifest-0-035-4e5e-2bb603.xml
Sandbox/stlink-linux/: st-flash  st-info
_sandbox/MinGW/msys/1.0/etc/: fstab
_sandbox/MinGW/var/lib/mingw-get/data/: manifest-0-036-3187-696ac1.xml  sysroot-0-002-a7c6-d7dbb5.xml
cmake/: arm_gcc_toolchain.cmake
