cmake_minimum_required(VERSION 3.9)

include(utils)

SET(STM32HAL_DIR "${PROJECT_SOURCE_ROOT_DIR}/Drivers/STM32F1xx_HAL_Driver")
check_if_dir_exists(${STM32HAL_DIR})

set(STM32HAL_SOURCE_DIR ${STM32HAL_DIR}/Src)
set(STM32HAL_INCLUDE_DIR ${STM32HAL_DIR}/Inc)

file(GLOB_RECURSE HAL_SOURCES ${STM32HAL_SOURCE_DIR}/*.c)
file(GLOB_RECURSE HAL_INCLUDES ${STM32HAL_INCLUDE_DIR}/*.h)
set(HAL_STARTUP ${PROJECT_SOURCE_ROOT_DIR}/startup_stm32f103xb.s)
set(CMSIS_DEVICE_INCLUDES_DIR "${PROJECT_SOURCE_ROOT_DIR}/Drivers/CMSIS/Device/ST/STM32F1xx/Include")
set(CMSIS_INCLUDES_DIR "${PROJECT_SOURCE_ROOT_DIR}/Drivers/CMSIS/Include")
set(CMSIS_INCLUDES 
    ${CMSIS_DEVICE_INCLUDES_DIR}/stm32f1xx.h
    ${CMSIS_DEVICE_INCLUDES_DIR}/system_stm32f1xx.h
    ${CMSIS_INCLUDES_DIR}/core_cm3.h
)


add_library(hal ${HAL_INCLUDES} ${HAL_SOURCES} ${CMSIS_INCLUDES} ${HAL_STARTUP})
target_include_directories(hal PUBLIC ${STM32HAL_INCLUDE_DIR} ${CMSIS_DEVICE_INCLUDES_DIR} ${CMSIS_INCLUDES_DIR})
target_link_libraries(hal core)